<resources>
    <string name="alert_title">Vehicle alerts</string>
    <string name="alert_none">No active reported alerts</string>
    <string name="alert_disconnected">Vehicle disconnected</string>
    <string name="alert_hood">Hood open</string>
    <string name="alert_front_left">Front left door open</string>
    <string name="alert_front_right">Front right door open</string>
    <string name="alert_rear_left">Rear left door open</string>
    <string name="alert_rear_right">Rear right door open</string>
    <string name="alert_trunk">Trunk open</string>
...
